# easy-db

./: .gitignore  LICENSE  README.md  __about__.py  __init__.py  pyproject.toml
database/: db_core.py  db_utils.py  handlers.py
models/: db_model.py  exceptions.py
utils/: formatters.py  utils.py
